{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 144,
  "lineage": "a303f85f-0818-b7f9-7b66-f5af816577b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c162830ceafc3440",
            "association_id": "eipassoc-070d7dbce50df4d13",
            "domain": "vpc",
            "id": "eipalloc-0c162830ceafc3440",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ccb42b8c11089647",
            "private_dns": "ip-10-255-0-236.ec2.internal",
            "private_ip": "10.255.0.236",
            "public_dns": "ec2-50-17-186-74.compute-1.amazonaws.com",
            "public_ip": "50.17.186.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Microservice-Architecture-project-nat-eip"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-nat-eip",
              "project": "Microservice-Architecture-project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094f380725f62923a",
            "arn": "arn:aws:ec2:us-east-1:321863202336:instance/i-074fe80a4fb8fe7ee",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074fe80a4fb8fe7ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "CICD",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-026509da3d39d9989",
            "private_dns": "ip-10-255-2-253.ec2.internal",
            "private_ip": "10.255.2.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04078ed082f517bcf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bc6d2f6975e9717",
            "tags": {
              "Name": "Microservice-Architecture-project-database"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-database",
              "project": "Microservice-Architecture-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00219f04b21cae7fa"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.database",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile",
            "data.aws_ssm_parameter.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:internet-gateway/igw-0a517dc771d0a5ffb",
            "id": "igw-0a517dc771d0a5ffb",
            "owner_id": "321863202336",
            "tags": {
              "Name": "Microservice-Architecture-project-internet-gateway"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-internet-gateway",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cl-20221110155159762900000005/b9c498b4ca8c5279",
            "arn_suffix": "app/cl-20221110155159762900000005/b9c498b4ca8c5279",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cl-20221110155159762900000005-1177215448.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cl-20221110155159762900000005/b9c498b4ca8c5279",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "cl-20221110155159762900000005",
            "name_prefix": "cl-",
            "security_groups": [
              "sg-04f0242adf1f6f731"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aefddc286aa268bc"
              },
              {
                "subnet_id": "subnet-0c1759be8e95fd0d8"
              }
            ],
            "subnets": [
              "subnet-0aefddc286aa268bc",
              "subnet-0c1759be8e95fd0d8"
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-client-lb"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-client-lb",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "fruits_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/fr-20221111052429404500000002/f92715f06dd88d6f",
            "arn_suffix": "app/fr-20221111052429404500000002/f92715f06dd88d6f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-fr-20221111052429404500000002-1317415769.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/fr-20221111052429404500000002/f92715f06dd88d6f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fr-20221111052429404500000002",
            "name_prefix": "fr-",
            "security_groups": [
              "sg-064b410ab4c296246"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05bc6d2f6975e9717"
              },
              {
                "subnet_id": "subnet-0d24edbc898f2e1d1"
              }
            ],
            "subnets": [
              "subnet-05bc6d2f6975e9717",
              "subnet-0d24edbc898f2e1d1"
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-fruits-lb"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-fruits-lb",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.fruits_lb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vegetables_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/vg-20221111055107168900000004/b24773bf046f7f42",
            "arn_suffix": "app/vg-20221111055107168900000004/b24773bf046f7f42",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-vg-20221111055107168900000004-18349537.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/vg-20221111055107168900000004/b24773bf046f7f42",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vg-20221111055107168900000004",
            "name_prefix": "vg-",
            "security_groups": [
              "sg-0a97b032ac928af4e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05bc6d2f6975e9717"
              },
              {
                "subnet_id": "subnet-0d24edbc898f2e1d1"
              }
            ],
            "subnets": [
              "subnet-05bc6d2f6975e9717",
              "subnet-0d24edbc898f2e1d1"
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-vegetables-lb"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-vegetables-lb",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.vegetables_lb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/cl-20221110155159762900000005/b9c498b4ca8c5279/930c9b721981a1bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cl-20221110155158114100000002/e256e11b404b818c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/cl-20221110155159762900000005/b9c498b4ca8c5279/930c9b721981a1bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/cl-20221110155159762900000005/b9c498b4ca8c5279",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.client_lb",
            "aws_lb_target_group.client_lb_targets",
            "aws_security_group.client_lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fruits_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/fr-20221111052429404500000002/f92715f06dd88d6f/d32f36fa0b77a293",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/fr-20221111045821994600000001/c5cf58ff6d1d630a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/fr-20221111052429404500000002/f92715f06dd88d6f/d32f36fa0b77a293",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/fr-20221111052429404500000002/f92715f06dd88d6f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.fruits_lb",
            "aws_lb_target_group.fruits_lb_targets",
            "aws_security_group.fruits_lb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vegetables_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/vg-20221111055107168900000004/b24773bf046f7f42/5037b44969e7f488",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/vg-20221111055105390700000002/86b28e4a76df5026",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:listener/app/vg-20221111055107168900000004/b24773bf046f7f42/5037b44969e7f488",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:loadbalancer/app/vg-20221111055107168900000004/b24773bf046f7f42",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.vegetables_lb",
            "aws_lb_target_group.vegetables_lb_targets",
            "aws_security_group.vegetables_lb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "client_lb_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cl-20221110155158114100000002/e256e11b404b818c",
            "arn_suffix": "targetgroup/cl-20221110155158114100000002/e256e11b404b818c",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/cl-20221110155158114100000002/e256e11b404b818c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cl-20221110155158114100000002",
            "name_prefix": "cl-",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-client-tg"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-client-tg",
              "project": "Microservice-Architecture-project"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fruits_lb_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/fr-20221111045821994600000001/c5cf58ff6d1d630a",
            "arn_suffix": "targetgroup/fr-20221111045821994600000001/c5cf58ff6d1d630a",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/fr-20221111045821994600000001/c5cf58ff6d1d630a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fr-20221111045821994600000001",
            "name_prefix": "fr-",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-fruits-tg"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-fruits-tg",
              "project": "Microservice-Architecture-project"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vegetables_lb_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/vg-20221111055105390700000002/86b28e4a76df5026",
            "arn_suffix": "targetgroup/vg-20221111055105390700000002/86b28e4a76df5026",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:321863202336:targetgroup/vg-20221111055105390700000002/86b28e4a76df5026",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vg-20221111055105390700000002",
            "name_prefix": "vg-",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-vegetables-tg"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-vegetables-tg",
              "project": "Microservice-Architecture-project"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c162830ceafc3440",
            "connectivity_type": "public",
            "id": "nat-0ad0f0f451c5de876",
            "network_interface_id": "eni-0ccb42b8c11089647",
            "private_ip": "10.255.0.236",
            "public_ip": "50.17.186.74",
            "subnet_id": "subnet-0aefddc286aa268bc",
            "tags": {
              "Name": "Microservice-Architecture-project-nat"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-nat",
              "project": "Microservice-Architecture-project"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a517dc771d0a5ffb",
            "id": "r-rtb-0c616fe3b66661e881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c616fe3b66661e88",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0888c9f0b36d3f48e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad0f0f451c5de876",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0888c9f0b36d3f48e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:route-table/rtb-0888c9f0b36d3f48e",
            "id": "rtb-0888c9f0b36d3f48e",
            "owner_id": "321863202336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ad0f0f451c5de876",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-private-route-table"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-private-route-table",
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:route-table/rtb-0c616fe3b66661e88",
            "id": "rtb-0c616fe3b66661e88",
            "owner_id": "321863202336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a517dc771d0a5ffb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Microservice-Architecture-project-public-route-table"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-public-route-table",
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0661007f2392b6d99",
            "route_table_id": "rtb-0888c9f0b36d3f48e",
            "subnet_id": "subnet-05bc6d2f6975e9717"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480ec484e2f78c9c",
            "route_table_id": "rtb-0888c9f0b36d3f48e",
            "subnet_id": "subnet-0d24edbc898f2e1d1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061ab5e28ae34c489",
            "route_table_id": "rtb-0c616fe3b66661e88",
            "subnet_id": "subnet-0aefddc286aa268bc"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceba75789b3055ab",
            "route_table_id": "rtb-0c616fe3b66661e88",
            "subnet_id": "subnet-0c1759be8e95fd0d8"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-04f0242adf1f6f731",
            "description": "security group for client service application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f0242adf1f6f731",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic on port 80.",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic to fruit lb on port 80.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed2de5ce8e989ed7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Microservice-Architecture-project-ecs-client-lb20221110155158114800000003",
            "name_prefix": "Microservice-Architecture-project-ecs-client-lb",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-00219f04b21cae7fa",
            "description": "Database security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00219f04b21cae7fa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the fruits service.",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a69a552ec5c5ef99"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the vegetables service.",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6447afc1a92b748"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Microservice-Architecture-project-database20221111072832548600000001",
            "name_prefix": "Microservice-Architecture-project-database",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_client_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0ed2de5ce8e989ed7",
            "description": "ECS Client service security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed2de5ce8e989ed7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the client LB to the service container port.",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f0242adf1f6f731"
                ],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from resources with this security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Microservice-Architecture-project-ecs-client-service20221110155158111400000001",
            "name_prefix": "Microservice-Architecture-project-ecs-client-service",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_fruits_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0e6447afc1a92b748",
            "description": "ECS fruits service security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6447afc1a92b748",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the fruits LB to the service container port.",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064b410ab4c296246"
                ],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from resources with this security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Microservice-Architecture-project-ecs-fruits-service20221111045822013200000002",
            "name_prefix": "Microservice-Architecture-project-ecs-fruits-service",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_vegetables_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0a69a552ec5c5ef99",
            "description": "ECS vegetables service security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a69a552ec5c5ef99",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the vegetables LB to the service container port.",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a97b032ac928af4e"
                ],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from resources with this security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Microservice-Architecture-project-ecs-vegetables-service20221111055105383000000001",
            "name_prefix": "Microservice-Architecture-project-ecs-vegetables-service",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fruits_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-064b410ab4c296246",
            "description": "security group for fruits service application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064b410ab4c296246",
            "ingress": [],
            "name": "Microservice-Architecture-project-ecs-fruits-lb20221111045822150200000003",
            "name_prefix": "Microservice-Architecture-project-ecs-fruits-lb",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vegetables_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:security-group/sg-0a97b032ac928af4e",
            "description": "security group for vegetables service application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a97b032ac928af4e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic to vegetables lb on port 80.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed2de5ce8e989ed7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Microservice-Architecture-project-ecs-vegetables-lb20221111055105496200000003",
            "name_prefix": "Microservice-Architecture-project-ecs-vegetables-lb",
            "owner_id": "321863202336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "project": "Microservice-Architecture-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "client_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-4021360651",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04f0242adf1f6f731",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "client_lb_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic on port 80.",
            "from_port": 80,
            "id": "sgrule-1753578573",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04f0242adf1f6f731",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_allow_fruits_27017",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the vegetables service.",
            "from_port": 27017,
            "id": "sgrule-1472921252",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00219f04b21cae7fa",
            "self": false,
            "source_security_group_id": "sg-0e6447afc1a92b748",
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_security_group.ecs_fruits_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-2577402228",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00219f04b21cae7fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_allow_vegetables_27017",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the fruits service.",
            "from_port": 27017,
            "id": "sgrule-1868820638",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00219f04b21cae7fa",
            "self": false,
            "source_security_group_id": "sg-0a69a552ec5c5ef99",
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_security_group.ecs_vegetables_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_client_service_allow_9090",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the client LB to the service container port.",
            "from_port": 9090,
            "id": "sgrule-1806541670",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed2de5ce8e989ed7",
            "self": false,
            "source_security_group_id": "sg-04f0242adf1f6f731",
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_security_group.ecs_client_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_client_service_allow_inbound_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from resources with this security group.",
            "from_port": 0,
            "id": "sgrule-4221791328",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ed2de5ce8e989ed7",
            "self": true,
            "source_security_group_id": "sg-0ed2de5ce8e989ed7",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_client_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_client_service_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-2899752658",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ed2de5ce8e989ed7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_client_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_fruits_service_allow_9090",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the fruits LB to the service container port.",
            "from_port": 9090,
            "id": "sgrule-3831486130",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e6447afc1a92b748",
            "self": false,
            "source_security_group_id": "sg-064b410ab4c296246",
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_fruits_service",
            "aws_security_group.fruits_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_fruits_service_allow_inbound_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from resources with this security group.",
            "from_port": 0,
            "id": "sgrule-3527137647",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e6447afc1a92b748",
            "self": true,
            "source_security_group_id": "sg-0e6447afc1a92b748",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_fruits_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_fruits_service_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-996901018",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e6447afc1a92b748",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_fruits_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_vegetables_service_allow_9090",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow incoming traffic from the vegetables LB to the service container port.",
            "from_port": 9090,
            "id": "sgrule-910181902",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a69a552ec5c5ef99",
            "self": false,
            "source_security_group_id": "sg-0a97b032ac928af4e",
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_vegetables_service",
            "aws_security_group.vegetables_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_vegetables_service_allow_inbound_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from resources with this security group.",
            "from_port": 0,
            "id": "sgrule-1836995634",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a69a552ec5c5ef99",
            "self": true,
            "source_security_group_id": "sg-0a69a552ec5c5ef99",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_vegetables_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_vegetables_service_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3428085694",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a69a552ec5c5ef99",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_vegetables_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fruits_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-1826458395",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-064b410ab4c296246",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fruits_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fruits_lb_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTP traffic to fruit lb on port 80.",
            "from_port": 80,
            "id": "sgrule-3091384540",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04f0242adf1f6f731",
            "self": false,
            "source_security_group_id": "sg-0ed2de5ce8e989ed7",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.client_lb",
            "aws_security_group.ecs_client_service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vegetables_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3405517832",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a97b032ac928af4e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vegetables_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vegetables_lb_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTP traffic to vegetables lb on port 80.",
            "from_port": 80,
            "id": "sgrule-4193873589",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a97b032ac928af4e",
            "self": false,
            "source_security_group_id": "sg-0ed2de5ce8e989ed7",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_client_service",
            "aws_security_group.vegetables_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-05bc6d2f6975e9717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bc6d2f6975e9717",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-Architecture-project-private-us-east-1a"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-private-us-east-1a",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-0d24edbc898f2e1d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d24edbc898f2e1d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-Architecture-project-private-us-east-1b"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-private-us-east-1b",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-0aefddc286aa268bc",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aefddc286aa268bc",
            "ipv6_cidr_block": "2600:1f10:42ac:9300::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-07180786eaeec48ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-Architecture-project-public-us-east-1a"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-public-us-east-1a",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:subnet/subnet-0c1759be8e95fd0d8",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1759be8e95fd0d8",
            "ipv6_cidr_block": "2600:1f10:42ac:9301::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-02a384fbcc90a4572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321863202336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Microservice-Architecture-project-public-us-east-1b"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-public-us-east-1b",
              "project": "Microservice-Architecture-project"
            },
            "vpc_id": "vpc-0e528d962cca9065b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321863202336:vpc/vpc-0e528d962cca9065b",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.255.0.0/20",
            "default_network_acl_id": "acl-0d1fb2b2c2de53398",
            "default_route_table_id": "rtb-0747ad17c38a547a3",
            "default_security_group_id": "sg-01d12549f4792d792",
            "dhcp_options_id": "dopt-00fc5823eccd70426",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e528d962cca9065b",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-099410e73f55883dc",
            "ipv6_cidr_block": "2600:1f10:42ac:9300::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0747ad17c38a547a3",
            "owner_id": "321863202336",
            "tags": {
              "Name": "Microservice-Architecture-project-vpc"
            },
            "tags_all": {
              "Name": "Microservice-Architecture-project-vpc",
              "project": "Microservice-Architecture-project"
            }
          }
        }
      ]
    }
  ]
}